@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 25, 2008</p>
+      <p>Last Updated: November 26, 2008</p>
     </td>
   </tr>
 </table>
@@ -1221,6 +1221,8 @@ nuttx-0.3.19 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Added fixed precision math support
 	* Added some color converson routines into what may become a real graphics library someday.
 	* Added a framebuffer driver for the DM320 (untested on initial check-in)
+	* Network: add support for outgoing multicast addresses
+	* Added some rasterizers to the graphics library
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
