@@ -65,8 +65,12 @@ FILL1_CSRCS	= nxglib_fillrectangle_1bpp.c nxglib_fillrectangle_2bpp.c \
 		  nxglib_fillrectangle_4bpp.c
 FILL2_CSRCS	= nxglib_fillrectangle_8bpp.c nxglib_fillrectangle_16bpp.c \
 		  nxglib_fillrectangle_24bpp.c nxglib_fillrectangle_32bpp.c
+MOVE1_CSRCS	= nxglib_moverectangle_1bpp.c nxglib_moverectangle_2bpp.c \
+		  nxglib_moverectangle_4bpp.c
+MOVE2_CSRCS	= nxglib_moverectangle_8bpp.c nxglib_moverectangle_16bpp.c \
+		  nxglib_moverectangle_24bpp.c nxglib_moverectangle_32bpp.c
 
-GEN_CSRCS	= $(FILL1_CSRCS) $(FILL2_CSRCS)
+GEN_CSRCS	= $(FILL1_CSRCS) $(FILL2_CSRCS) $(MOVE1_CSRCS) $(MOVE2_CSRCS)
 
 all:	$(GEN_CSRCS)
 .PHONY : clean distclean
@@ -81,9 +85,18 @@ ifneq ($(NXGLIB_BITSPERPIXEL),)
 	$(call PREPROCESS, nxglib_fillrectangle.c, $@)
 endif
 
+$(MOVE1_CSRCS) : nxglib_moverectangle.c nxglib_bitblit.h
+ifneq ($(NXGLIB_BITSPERPIXEL),)
+	$(call PREPROCESS, nxglib_moverectangle.c, $@)
+endif
+
+$(MOVE2_CSRCS) : nxglib_moverectangle.c nxglib_bitblit.h
+ifneq ($(NXGLIB_BITSPERPIXEL),)
+	$(call PREPROCESS, nxglib_moverectangle.c, $@)
+endif
 clean:
 	@rm -f *~ .*.swp
 
 distclean: clean
-	@rm -f nxglib_fillrectangle_*bpp.c
+	@rm -f nxglib_fillrectangle_*bpp.c nxglib_moverectangle_*bpp.c
 
